# rust-mongo-backup

./: .env  .gitignore  Cargo.toml  Dockerfile
config/: Default.toml  Production.toml
src/: main.rs  settings.rs  upload.rs
