[package]
name = "mongodump"
version = "0.1.0"
authors = ["manishsingh <manishsingh10895@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
log = "0.4.13"
env_logger = "0.8.2"
reqwest = "0.11.0"
serde = "1.0.118"
config = "0.10"
chrono = "0.4"
rusoto_core = "0.46.0"
tokio-util =  { version = "0.6.1", optional=true }
openssl = { version = "0.10", features = ["vendored"] }
rusoto_sqs = "0.46.0"
rusoto_s3 = "0.46.0"
structopt = "0.3.17"
colored = "2.0.0"
failure = "0.1.8"

#cargo build --release --target=x86_64-unknown-linux-gnu